k8s/deploy-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dashboard-frontend
  labels:
    app: dashboard-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dashboard-frontend
  template:
    metadata:
      labels:
        app: dashboard-frontend
    spec:
      nodeSelector:
        kubernetes.io/hostname: masternode
      containers:
        - name: frontend
          image: dashboard-frontend:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 5173
              protocol: TCP
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "128Mi"
              cpu: "200m"
