k8s/deploy-redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dashboard-redis
  labels:
    app: dashboard-redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dashboard-redis
  template:
    metadata:
      labels:
        app: dashboard-redis
    spec:
      containers:
        - name: redis
          image: redis:alpine
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 6379
              protocol: TCP
          resources:
            requests:
              memory: "32Mi"
              cpu: "50m"
            limits:
              memory: "64Mi"
              cpu: "100m"
