k8s/svc-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: dashboard-backend
spec:
  selector:
    app: dashboard-backend
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
      name: http
  type: ClusterIP
