k8s/svc-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: dashboard-frontend
spec:
  selector:
    app: dashboard-frontend
  ports:
    - port: 5173
      targetPort: 5173
      protocol: TCP
      name: http
  type: ClusterIP
