k8s/svc-redis.yaml
apiVersion: v1
kind: Service
metadata:
  name: dashboard-redis
spec:
  selector:
    app: dashboard-redis
  ports:
    - port: 6379
      targetPort: 6379
      protocol: TCP
      name: redis
  type: ClusterIP
